--- a/IAdventure/UserSettings/Search.settings
+++ b/IAdventure/UserSettings/Search.settings
@@ -1,4 +1,5 @@
 trackSelection = true
+refreshSearchWindowsInPlayMode = false
 fetchPreview = true
 defaultFlags = 0
 keepOpen = false
@@ -10,11 +11,16 @@ scopes = {
 	"last_search.E8DA15E5" = "turret"
 	"OpenInspectorPreview.E8DA15E5" = "0"
 	"currentGroup.E8DA15E5" = "all"
-	"picker_window_position_offset.74AD8FDB" = "-403,2;210,4;790,4;550,4"
-	"picker_search_text.74AD8FDB" = "parti "
-	"last_search.74AD8FDB" = "parti "
+	"picker_window_position_offset.74AD8FDB" = "-403,2001;210,4;790,4;550,4"
+	"picker_search_text.74AD8FDB" = ""
+	"last_search.74AD8FDB" = ""
 	"OpenInspectorPreview.74AD8FDB" = "0"
-	"currentGroup.74AD8FDB" = "_group_provider_Texture 2D"
+	"currentGroup.74AD8FDB" = "all"
+	"picker_window_position_offset.3172962C" = "-644,0001;299,2;590,4;550,4"
+	"picker_search_text.3172962C" = "debris"
+	"last_search.3172962C" = "debris"
+	"OpenInspectorPreview.3172962C" = "0"
+	"currentGroup.3172962C" = "all"
 }
 providers = {
 	adb = {
@@ -74,3 +80,5 @@ queryBuilder = false
 ignoredProperties = "id;name;classname;imagecontentshash"
 helperWidgetCurrentArea = "all"
 disabledIndexers = ""
+minIndexVariations = 2
+findProviderIndexHelper = true
